# Monkey-Tracking

./: .gitignore  CMakeLists.txt  Source.cpp  get_stills.py  histogram_match.py  histogram_match.py.lprof  setup.py  video_tracker2.py
KinectSync/: KinectSync.ino
KinectSync/KinectSyncBoard/: LEDSync.brd  LEDSync_AR.brd  LEDSync_AR.cmp  LEDSync_AR.drd  LEDSync_AR.dri  LEDSync_AR.fab  LEDSync_AR.gpi  LEDSync_AR.plc  LEDSync_AR.pro  LEDSync_AR.sch  LEDSync_AR.sol  LEDSync_AR.stc  LEDSync_AR.stencil  LEDSync_AR.sts  LEDSync_AR.tss  eagle.epf  untitled.b##  untitled.s##
KinectSyncTeensy/: KinectSyncTeensy.ino
KinectSyncTeensy_old/: KinectSyncTeensy_old.ino
LED_Sync_Processing/: ExtractLEDs.m  GetFrameInds.m  GetPulseTimes.m  makeFiringRates.m  make_IR_Video.m
allOn/allOn.ino/: allOn.ino
classicMonkeyTracking/: histogram_match.py  preproc_video - Example.py  tune_parameters.py
